[package]
name = "icm20948"

version = "0.0.0"

license = "MIT OR Apache-2.0"
authors = ["Luke Wirtanen <WirtanenLuke@gmail.com>"]
repository = "https://github.com/Lukewir/icm20948"

edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.safer-ffi]
version = "0.0.10"
features = ["proc_macros", "headers"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
c-headers = ["safer-ffi/headers"]


